--- a/app/src/main/res/layout/entry_list_item.xml
+++ b/app/src/main/res/layout/entry_list_item.xml
@@ -24,7 +24,7 @@
         tools:layout_editor_absoluteY="16dp" />
 
     <TextView
-        android:id="@+id/note_text"
+        android:id="@+id/txt_entry"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
