--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".GLoginActivity"
-    tools:showIn="@layout/activity_glogin">
+    tools:context=".actvities.SplashScreenActivity">
 
 </android.support.constraint.ConstraintLayout>
