--- a/app/src/main/res/layout/entry_list_item.xml
+++ b/app/src/main/res/layout/entry_list_item.xml
@@ -31,6 +31,8 @@
         android:text="TextView"
         android:textSize="@dimen/list_text_size"
 
+        android:drawableRight="@drawable/ic_favorite"
+        android:drawableEnd="@drawable/ic_favorite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -38,19 +40,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.657" />
 
-    <ImageButton
-        android:id="@+id/ibtn_like"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/md_white_1000"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/txt_entry"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_star" />
 
     <TextView
         android:id="@+id/tv_date"
@@ -66,8 +55,9 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
+
         app:layout_constraintBottom_toTopOf="@+id/txt_entry"
-        app:layout_constraintEnd_toStartOf="@+id/ibtn_like"
+
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/fab"
         app:layout_constraintTop_toTopOf="parent"
